force-app/main/default/objects/Inner_Chat_Participant__c/Inner_Chat_Participant__c.object-meta.xml
<CustomObject>
    <label>Chat Participant</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Participant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>