force-app/main/default/objects/Inner_Chat_Participant__c/fields/Inner_Chat_Session__c.field-meta.xml
<CustomField>
    <fullName>Inner_Chat_Session__c</fullName>
    <label>Chat Session</label>
    <referenceTo>Inner_Chat_Session__c</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>