force-app/main/default/objects/Inner_Chat_Participant__c/fields/Is_Muted__c.field-meta.xml
<CustomField>
    <fullName>Is_Muted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Muted</label>
    <type>Checkbox</type>
</CustomField>